@@ -1,3 +1,5 @@
+2006/3/19 -- released version 20060319_trunk
+
 2006/3/18 -- released version 20060318_trunk
 
 2006/3/17 -- released version 20060317_trunk
